adding workflow to README